2008-10-19  Michael Natterer  <mitch@imendio.com>

	Bug 556186 – gpoll.h breaks gmain.h inclusion

	* glib/gpoll.h: different fix: disallow direct inclusion
	unconditionally again but make an exception if included from
	gmain.h to maintain compatibility.

2008-10-16  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump version to 2.19.1

	* === Released 2.19.0 ===

	* NEWS: Updates

2008-10-14  Christian Persch <chpe@gnome.org>

	Bug 556186 – gpoll.h breaks gmain.h inclusion

	* glib/gpoll.h: Only disallow direct inclusion when
	G_DISABLE_SINGLE_INCLUDES is defined.

2008-10-13  Sven Herzberg  <sven@imendio.com>

	Bug 556101 – static mutex yields warnings with g++
	Reviewed by Tim Janik

	* configure.in: added an intermediate cast to gpointer

2008-10-13  Christian Persch <chpe@gnome.org>

	Bug 555311 – format not a string literal and no format arguments

	* glib/gmarkup.c:
	* glib/gshell.c: Use literal errors where appropriate.

2008-10-10  Behdad Esfahbod  <behdad@gnome.org>

	Bug 551355 – [PATCH] Make glib build with libtool 2.2

	* autogen.sh: Accept libtool 2.2.   We are moving towards having
	it working.

2008-10-10  Behdad Esfahbod  <behdad@gnome.org>

	* configure.in: With libtool 2.x, regenerate libtool early.
	Based on bug 552107, patch by Patryk Zawadzki

2008-10-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 554557 – Patch to fix gcc warnings about missing format 
	specifiers

	* glib/gmarkup.c:
	* glib/gshell.c:
	* glib/grel.c: Fix gcc warnings. Patch by Kjartan Maraas

2008-10-10  Matthias Clasen  <mclasen@redhat.com>

	Bug 552861 – glib-2.0.m4 calls system(3) without storing its result

	* m4macros/glib-2.0.m4: Cosmetic change to make -Werror happy.
	Patch by Andreas Köhler

2008-10-08  Christian Persch  <chpe@gnome.org>

        Bug 555313 – GFileAttribute boxed type get_type function should
        use usual get_type pattern

        * gio/gfileattribute.c (g_file_attribute_info_list_get_type): Use
        g_once_init_enter/leave.
